# QUE-PLUME-IA

./: .gitignore  Attach_Screen.sh  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Create_GUI_Worker.sh  DartConfiguration.tcl  IA.cpp  Makefile  README.md  Tracker.cpp  cmake_install.cmake  datapush.py
include/: core.h
src/: CameraCalibration.cpp  ColorExtractor.cpp  TrackerRecognition.cpp  datapush.py  frozen_graph.pb  frozen_graph_v10.pb  frozen_graph_v12.pb  frozen_graph_v4.pb  frozen_graph_v5.pb  frozen_graph_v7.pb  frozen_graph_v8.pb  frozen_graph_v9.pb  main.cpp  manager.h  test.txt
src/Calibration/: CMakeCache.txt  CameraCalibration  CameraCalibration.cpp  Makefile  cmake_install.cmake  run.sh
src/Tracker_Object_Recognition/: CMakeCache.txt  CMakeLists.txt  Makefile  TrackerRecognition  TrackerRecognition.cpp  cmake_install.cmake  run.sh
src/frozen_models/: frozen_graph_v11.pb  frozen_graph_v12.pbtxt  frozen_graph_v2.pb  frozen_graph_v3.pb  frozen_graph_v6.pb
